# speedtest-cli

./: .gitignore  PKGBUILD  README.rst  pyproject.toml  speedtest.py  tox.ini
.github/workflow/: release.yml
.github/workflows/: release.yml  test.yml
