[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "speedtest-cli"
dynamic = ["version"]
description = "Command line interface for testing internet bandwidth using speedtest.net"
readme = "README.rst"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Matt Martz", email = "matt@sivel.net" }]
maintainers = [{ name = "Eihdran Lego", email = "hadean-eon-dev@proton.me" }]
keywords = ["speedtest", "speedtest.net"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/sivel/speedtest-cli"

[project.scripts]
speedtest = "speedtest:main"
speedtest-cli = "speedtest:main"

[tool.setuptools]
py-modules = ["speedtest"]

[tool.setuptools.dynamic]
version = { attr = "speedtest.__version__" }
